// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpdateEvent can update an existing event 1`] = `
Object {
  "data": Object {
    "updateEvent": Object {
      "event": Object {
        "createdAt": "[timestamp-5]",
        "createdBy": "[id-2]",
        "description": "[random-3]",
        "eventEndTime": "[timestamp-2]",
        "eventStartTime": "[timestamp-1]",
        "headerImageFile": "[random-5]",
        "id": "[id-1]",
        "isDraft": false,
        "isHighlighted": false,
        "location": "[random-4]",
        "name": "[random-1]",
        "openQuotaSize": 0,
        "registrationEndTime": "[timestamp-4]",
        "registrationStartTime": "[timestamp-3]",
        "signupClosed": false,
        "signupOpen": true,
        "signupUpcoming": false,
        "slug": "[random-2]",
        "updatedAt": "[timestamp-6]",
        "updatedBy": "[id-2]",
      },
    },
  },
}
`;

exports[`UpdateEvent can't update an event while logged out 1`] = `
Object {
  "data": Object {
    "updateEvent": null,
  },
  "errors": Array [
    Object {
      "extensions": Object {
        "exception": Object {
          "code": "LOGIN",
          "severity": "ERROR",
          "where": "PL/pgSQL function app_public.update_event(uuid,app_public.event_input,app_public.update_event_quotas[],app_public.update_event_questions[]) line 8 at RAISE",
        },
      },
      "locations": Array [
        Object {
          "column": 3,
          "line": 2,
        },
      ],
      "message": "You must log in to update an event",
      "path": Array [
        "updateEvent",
      ],
    },
  ],
}
`;

exports[`UpdateEvent must specify at least one event quota 1`] = `
Object {
  "data": Object {
    "updateEvent": null,
  },
  "errors": Array [
    Object {
      "extensions": Object {
        "exception": Object {
          "code": "DNIED",
          "severity": "ERROR",
          "where": "PL/pgSQL function app_public.update_event_quotas(uuid,app_public.update_event_quotas[]) line 16 at RAISE
SQL statement \\"SELECT * from app_public.update_event_quotas(id, quotas)\\"
PL/pgSQL function app_public.update_event(uuid,app_public.event_input,app_public.update_event_quotas[],app_public.update_event_questions[]) line 32 at PERFORM",
        },
      },
      "locations": Array [
        Object {
          "column": 3,
          "line": 2,
        },
      ],
      "message": "You must specify at least one quota",
      "path": Array [
        "updateEvent",
      ],
    },
  ],
}
`;
